--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@polymer/lit-element": "^0.7.1",
+    "nexusui": "^2.0.10",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-nexusui": "^0.1.7",
+    "react-scripts": "3.1.1",
+    "tone": "^13.4.9"
   },
   "scripts": {
     "start": "react-scripts start",
